--- a/index.html
+++ b/index.html
@@ -1,117 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Speech to Text</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Inter', sans-serif;
-      background: #f5f7fa;
-      color: #333;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 40px 20px;
-      margin: 0;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 20px;
-      color: #1e293b;
-    }
-
-    #startBtn {
-      background-color: #4f46e5;
-      color: white;
-      border: none;
-      padding: 12px 24px;
-      font-size: 16px;
-      font-weight: 600;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    #startBtn:hover {
-      background-color: #4338ca;
-    }
-
-    #result {
-      width: 100%;
-      max-width: 700px;
-      background-color: #fff;
-      margin-top: 30px;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.05);
-      font-size: 1.2rem;
-      line-height: 1.6;
-      min-height: 150px;
-      text-align: left;
-      white-space: pre-wrap;
-    }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 2rem;
-      }
-
-      #result {
-        font-size: 1rem;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Speech to Text</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+            background-color: #f5f5f5;
+        }
+        h1 {
+            color: #333;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            margin: 10px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+        }
+        #startBtn {
+            background-color: #4CAF50;
+            color: white;
+        }
+        #copyBtn {
+            background-color: #2196F3;
+            color: white;
+        }
+        #result {
+            margin: 20px auto;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            background: white;
+            max-width: 600px;
+            min-height: 120px;
+            font-size: 18px;
+            white-space: pre-wrap;
+            text-align: left;
+        }
+    </style>
 </head>
 <body>
-  <h1>🎤 Speech to Text</h1>
-  <button id="startBtn">Start Listening</button>
-  <div id="result">Your speech will appear here...</div>
+    <h1>Speech to Text</h1>
+    <button id="startBtn">Start Listening</button>
+    <button id="copyBtn">Copy Text</button>
+    <div id="result"></div>
 
-  <script>
-    const startBtn = document.getElementById('startBtn');
-    const resultDiv = document.getElementById('result');
+    <script>
+        const startBtn = document.getElementById('startBtn');
+        const copyBtn = document.getElementById('copyBtn');
+        const resultDiv = document.getElementById('result');
 
-    const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-    if (!SpeechRecognition) {
-      alert("Sorry, your browser doesn't support speech recognition!");
-    } else {
-      const recognition = new SpeechRecognition();
-      recognition.continuous = true;
-      recognition.interimResults = true;
+        // Load previous session text if any
+        resultDiv.textContent = sessionStorage.getItem('speechText') || '';
 
-      let isListening = false;
+        const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
 
-      startBtn.addEventListener('click', () => {
-        if (!isListening) {
-          recognition.start();
-          startBtn.textContent = 'Stop Listening';
-          isListening = true;
+        if (!SpeechRecognition) {
+            alert("Sorry, your browser doesn't support speech recognition!");
         } else {
-          recognition.stop();
-          startBtn.textContent = 'Start Listening';
-          isListening = false;
-        }
-      });
+            const recognition = new SpeechRecognition();
+            recognition.continuous = true;
+            recognition.interimResults = true;
 
-      recognition.onresult = (event) => {
-        let transcript = '';
-        for (let i = event.resultIndex; i < event.results.length; ++i) {
-          transcript += event.results[i][0].transcript;
-        }
-        resultDiv.textContent = transcript.trim();
-      };
+            startBtn.addEventListener('click', () => {
+                if (startBtn.textContent === 'Start Listening') {
+                    recognition.start();
+                    startBtn.textContent = 'Stop Listening';
+                } else {
+                    recognition.stop();
+                    startBtn.textContent = 'Start Listening';
+                }
+            });
 
-      recognition.onerror = (event) => {
-        console.error("Speech Recognition Error:", event.error);
-      };
-    }
-  </script>
+            recognition.onresult = (event) => {
+                let currentText = sessionStorage.getItem('speechText') || '';
+                for (let i = event.resultIndex; i < event.results.length; i++) {
+                    const transcript = event.results[i][0].transcript;
+                    if (event.results[i].isFinal) {
+                        currentText += transcript + ' ';
+                    }
+                }
+                sessionStorage.setItem('speechText', currentText);
+                resultDiv.textContent = currentText;
+            };
+
+            recognition.onerror = (event) => {
+                console.error("Error:", event.error);
+            };
+        }
+
+        copyBtn.addEventListener('click', () => {
+            const text = resultDiv.textContent;
+            navigator.clipboard.writeText(text).then(() => {
+                alert("Text copied to clipboard!");
+            }).catch(err => {
+                console.error("Copy failed:", err);
+            });
+        });
+    </script>
 </body>
 </html>
